{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 26,
  "lineage": "fc9208f7-c321-e621-8b2a-0cf2a2dace6d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569057217468:internet-gateway/igw-044e152036a95b3fa",
            "id": "igw-044e152036a95b3fa",
            "owner_id": "569057217468",
            "tags": {
              "Name": "fabricflow-igw"
            },
            "tags_all": {
              "Name": "fabricflow-igw"
            },
            "vpc_id": "vpc-0408fe2b20b10175d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569057217468:route-table/rtb-0f13a164f41a015ee",
            "id": "rtb-0f13a164f41a015ee",
            "owner_id": "569057217468",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-044e152036a95b3fa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fabricflow-rt-public"
            },
            "tags_all": {
              "Name": "fabricflow-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0408fe2b20b10175d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d294a6fd4050ee3f",
            "route_table_id": "rtb-0f13a164f41a015ee",
            "subnet_id": "subnet-02ca597be46153707"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01926358c6904ac61",
            "route_table_id": "rtb-0f13a164f41a015ee",
            "subnet_id": "subnet-028b8226918d13924"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569057217468:security-group/sg-004c76f81c12dae88",
            "description": "FabricFlow application server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004c76f81c12dae88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from allowed CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "App port (internal + Jenkins deploy)",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-063e9e1a1096a2cc3"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "fabricflow-app-sg",
            "name_prefix": "",
            "owner_id": "569057217468",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "fabricflow-app-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "fabricflow-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0408fe2b20b10175d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.jenkins",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569057217468:security-group/sg-0cc2aa78b8c4d233f",
            "description": "Internal DB access only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc2aa78b8c4d233f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from App",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-004c76f81c12dae88"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "fabricflow-db-sg",
            "name_prefix": "",
            "owner_id": "569057217468",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "fabricflow-db-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "fabricflow-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0408fe2b20b10175d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "aws_security_group.jenkins",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569057217468:security-group/sg-063e9e1a1096a2cc3",
            "description": "Jenkins CI server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063e9e1a1096a2cc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fabricflow-jenkins-sg",
            "name_prefix": "",
            "owner_id": "569057217468",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "fabricflow-jenkins-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "fabricflow-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0408fe2b20b10175d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569057217468:subnet/subnet-02ca597be46153707",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ca597be46153707",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569057217468",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fabricflow-public-a"
            },
            "tags_all": {
              "Name": "fabricflow-public-a"
            },
            "vpc_id": "vpc-0408fe2b20b10175d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569057217468:subnet/subnet-028b8226918d13924",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028b8226918d13924",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569057217468",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fabricflow-public-b"
            },
            "tags_all": {
              "Name": "fabricflow-public-b"
            },
            "vpc_id": "vpc-0408fe2b20b10175d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569057217468:vpc/vpc-0408fe2b20b10175d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6c1bef8353b8af2",
            "default_route_table_id": "rtb-03283f163c1bbc300",
            "default_security_group_id": "sg-0c39078ba07d34eda",
            "dhcp_options_id": "dopt-0dc12bb0252ee3732",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0408fe2b20b10175d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03283f163c1bbc300",
            "owner_id": "569057217468",
            "tags": {
              "Environment": "production",
              "Name": "fabricflow-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "fabricflow-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}